Update assertions to use getFirst() method